Sync flag markers across charts (#163)